--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Snake JS</title>
 </head>
 <body>
+    <canvas id="canvas" width="720" height="480"></canvas>
     <script src="script.js"></script>
 </body>
 </html>
